--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rerick Review Repository</title>
+    <title>Sunday Brunch Review Club Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -61,7 +61,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Rerick Review Repository. All rights reserved.</p>
+        <p>&copy; 2024 Sunday Brunch Tea Club. All rights reserved.</p>
     </footer>
 </body>
 </html>
