Style changes and button changes

--- a/chromakopia-review.html
+++ b/chromakopia-review.html
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#reviews">Old Reviews</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="old-reviews.html">Old Reviews</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
