Changes to Chromakopia review and favicon

--- a/about.html
+++ b/about.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Sunday Brunch Review Club</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">Sunday Brunch Review Club</div>
+        <div class="logo"><img src="images/favicontransparent (1).png" alt="Coffee Cup" class="logo-img">
+            Sunday Brunch Review Club</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
