--- a/chromakopia-review.html
+++ b/chromakopia-review.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chromakopia Album Review</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">Sunday Brunch Review Club</div>
+        <div class="logo"><img src="images/favicontransparent (1).png" alt="Coffee Cup" class="logo-img">
+            Sunday Brunch Review Club</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -37,7 +39,7 @@
                 <li>10. Tomorrow <strong>7/10</strong></li>
                 <li>11. Thought I Was Dead (Ft. Santigold & ScHoolboy Q)<strong>9/10</strong></li>
                 <li>12. Like Him (Ft. Lola Young) <strong>10/10</strong></li>
-                <li>13. Balloon (Ft. Doechii) <strong>5/10</strong></li>
+                <li>13. Balloon (Ft. Doechii) <strong>2/10</strong></li>
                 <li>14. I Hope You Find Your Way Home <strong>6/10</strong></li>
             </ul>
 
@@ -51,7 +53,7 @@
                 <li><strong>Standout Tracks:</strong> St. Chroma, Like Him, and Noid</li>
                 <li><strong>Most Experimental:</strong> St. Chroma</li>
                 <li><strong>Least Favorites:</strong> Sticky, Balloon, and I Hope You Find Your Way Home</li>
-                <li><strong>Album Rating:</strong> Strong 8/10</li>
+                <li><strong>Album Rating:</strong>7.57/10</li>
             </ul>
         </section>
     </main>
