--- a/chromakopia-review.html
+++ b/chromakopia-review.html
@@ -53,7 +53,9 @@
                 <li><strong>Standout Tracks:</strong> St. Chroma, Like Him, and Noid</li>
                 <li><strong>Most Experimental:</strong> St. Chroma</li>
                 <li><strong>Least Favorites:</strong> Sticky, Balloon, and I Hope You Find Your Way Home</li>
-                <li><strong>Album Rating:</strong>7.57/10</li>
+                <li><strong>Album Rating:</strong>8/10</li>
+                <li><strong>Album True Average:</strong>7.57/10</li>
+
             </ul>
         </section>
     </main>
