--- a/chromakopia-review.html
+++ b/chromakopia-review.html
@@ -6,6 +6,15 @@
     <title>Chromakopia Album Review</title>
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99KYS0R89B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-99KYS0R89B');
+</script>
 </head>
 <body>
     <header>
